# pard

./: .gitignore  CMakeLists.txt  Makefile  README.md  TEST_REPORT.md
docs/: INTEGRATION_TEST_REPORT.md  PERFORMANCE_TEST_REPORT.md  README.md  implementation_plan.md  test_results.md
examples/: example.c
include/: pard.h
src/: pard.c
src/core/: csr_matrix.c  matrix_utils.c
src/factorization/: cholesky_factor.c  ldlt_factor.c  lu_factor.c
src/mpi/: mpi_distribute.c  mpi_factor.c  mpi_solve.c
src/ordering/: minimum_degree.c  nested_dissection.c  ordering_utils.c
src/refinement/: iterative_refinement.c
src/solve/: backward_sub.c  forward_sub.c  solve.c
src/symbolic/: elimination_tree.c  symbolic_factor.c
tests/: TEST_SUMMARY.md
tests/benchmark/: FINAL_COMPARISON_REPORT.md  PERFORMANCE_COMPARISON_FINAL.md  PERFORMANCE_COMPARISON_REPORT.md  PERFORMANCE_REPORT.md  PERFORMANCE_TEST_REPORT.md  PERFORMANCE_TEST_SUMMARY.md  benchmark.c  collect_performance.sh  collect_real_data.sh  comprehensive_perf_test.sh  create_comparison_data.py  create_matrix.c  create_perf_matrices.py  create_performance_data.py  create_rectangular_matrix.c  current_performance.txt  download_matrices.sh  final_performance_report.md  generate_multi_core_report.py  generate_pard_multi_core_report.py  generate_performance_report.py  mumps_benchmark.c  mumps_compare.c  optimize_pard_performance.sh  perf_test_with_create.c  performance_results_20260120_074935.txt  performance_results_20260120_075026.txt  performance_test.sh  plot_pard_mumps_comparison.py  plot_performance.py  quick_comparison_test.sh  quick_performance_test.sh  run_all_benchmarks.sh  run_comparison_test.sh  run_full_performance_test.sh  run_multi_core_test.sh  run_optimization_test.sh  run_pard_mumps_comparison.py  run_pard_mumps_test.sh  run_performance_comparison.sh  (+5 more)
tests/benchmark/perf_results/: MULTI_CORE_PERFORMANCE_REPORT.md  multi_core_mumps_data.csv  multi_core_performance_20260117_090404.csv  multi_size_performance_20260120_063300.csv  mumps_1000x1000_rebuild.csv  pard_1000x1000_multi_core.csv  pard_mumps_comparison.csv  performance_20260120_061421.csv  performance_optimization_20260120_060617.csv  performance_report.txt  performance_results.csv  performance_summary.txt
tests/benchmark/test_matrices/: create_test_matrix.py  perf_matrix_100000x100000.mtx  perf_matrix_1000x1000.mtx  perf_matrix_1000x10000.mtx  perf_matrix_100x100.mtx  perf_matrix_10x10.mtx  perf_matrix_500x500.mtx  test_simple.mtx  test_sym_100.mtx
tests/integration/: test_integration.c
tests/unit/: test_unit.c
